public/less/resume.less
/* ... */
.skill-info {
    display: table-cell;
    vertical-align: middle;
    padding: 0 0 0 5px;
    
    .skill-level {
        font-size: 1.3rem;
        display: block;
    }
}

.skillColors(@dark: gray,@light: lightgray) {
    background: @dark;
    color: lighten(@light,35%);
    border-color: @light;
    fill: @light;
    
    h4 { color: @light }
}

.photoshop { .skillColors(#17153D,#0FD8F7) }
.indesign { .skillColors(#25000C,#FB408C) }
.acrobat { .skillColors(#2B0000,#ff0000) }
.illustrator { .skillColors(#310F00,#FF8F22) }
.css { .skillColors(#002A04,#29F912) }
.html { .skillColors(#290000,#FF5900) }
.wordpress { .skillColors(#000,#827F7E) }
.git { .skillColors(#200F00,#F05127) }
.javascript { .skillColors(#000D2D,#00A0D7) }



// 
// Footer
// 
footer {
    border-top: 3px solid;
    border-color: @colorPrimary;
    text-align: center;
    z-index: -10;
    
    .content-wrap {
        position: relative;
        
        .drop-arrow(@dir: 'footer');
        
        @media @phone {
            padding-left: 0!important;
            
            .drop-arrow(@size: 25px,@dir: 'footer');
        }
    }
}

#connect {
    //position: relative;
    text-align: center;
    //margin: 0;
    
    //@media @phablet { margin: 0 0 @mobilePadding*.75 0 }
    
    li {
        display: inline-block;
        margin: 0 1.5rem @padding 1.5rem;
        font-size: 1.5rem;
        
        @media @phablet { margin-bottom:@mobilePadding }
        
        @media only screen and (max-width: 369px) { width: 32%; text-align: left }
    }
    
    a {
        position: relative;
        color: @colorPrimaryLight;
        text-decoration: none;
        transition: all .3s cubic-bezier(0.19, 0.02, 0, 0.99);
        padding: 0 0 0 3rem;
        
        span { position: relative }
        
        &:before {
            display: block;
            content: '';
            position: absolute;
            left: 0;
            top: 50%;
            transform: translate3d(0,-50%,0);
            height: 2.5rem;
            width: 2.5rem;
            border-radius: 50%;
            text-align: center;
            line-height: 2.5rem;
            font-size: 1.25rem;
            background: @colorPrimary;
            color: white;
            font-family: 'FontAwesome';
        }

        span:after {
            display: block;
            content: '';
            position: absolute;
            left: 0;
            bottom: -.2rem;
            height: .2rem;
            width: 100%;
            opacity: 0;
            transform: perspective(1px) scaleX(0);
            transition: all .3s cubic-bezier(0.19, 0.02, 0, 0.99);
        }

        &:hover,
        &:active {
            color: white;

            span:after {
                opacity: 1;
                transform: perspective(1px) scaleX(1);
            }

        }
        
        &.contact:before { content: '\f1d8'; padding-right: .2rem }
        &.codepen:before { content: '\f1cb' }
        &.twitter:before { content: '\f099'; color: #2caae1 }
        &.github:before { content: '\f113' }
        &.linkedin:before { content: '\f0e1' }
        &.behance:before { content: '\f1b4' }
        
        &.contact { .socialColors(@colorPrimary,'contact') }
        &.codepen { .socialColors(#ae63e4,'codepen') }
        &.twitter { .socialColors(white,'twitter') }
        &.github { .socialColors(#76c85a,'github') }
        &.linkedin { .socialColors(#1b86bd,'linkedin') }
        &.behance { .socialColors(#237ffc,'behance') }
        
        .socialColors(@color,@title) {
            &:before {
                background: @color;
            }
            
            &:hover,
            &:active {
                &:before { animation: @title 1s forwards }
            }
            
            span:after { background: @color }
            
            @keyframes @title {
                from { box-shadow: 0 0 0 @color }
                to { box-shadow: 0 0 0 10px fade(@color,0) }
            }
        }
    }
}

.footer-inner-wrap {
    display: block;
    //z-index: -1;
    width: 100%;
    max-width: 500px;
    margin: 0 auto;
    //overflow: hidden;
    padding: 1rem;
    
    /* @media @phone {
        display: inline-block!important;
        width: auto!important;
        //background: yellow;
        //overflow: visible;
        padding-top: 0;
    } */
}

@adobeCertLogo: 2.8rem;
@adobeCertPadding: .75rem;
@adobeCertOffset: @adobeCertLogo + .5rem;

#certification {
    display: inline-block;
    position: relative;
    border: 2px solid #fff;
    height: 5rem;
    border-radius: 1rem;
    padding: @adobeCertPadding*.9 @adobeCertPadding 0 (@adobeCertOffset + @adobeCertPadding);
    background-image: linear-gradient(to bottom,
      #fff, #a5b8c8);
    text-align: left;
    color: #0d1112;
    //float: left;
    
    @media @phone {
        float: none;
        margin-bottom: @mobilePadding;
    }
}

.certification-title {
    display: block;
    font-size: 1.4rem;
    font-weight: 700;
    letter-spacing: .25rem;
    text-transform: uppercase;
    margin: 0;
}

.certification-category {
    line-height: 1;
    font-size: 1.25rem;
    opacity: .8;
    margin: 0;
}
/* ... */

